--- a/style.css
+++ b/style.css
@@ -62,6 +62,20 @@ body{
     margin: 12px;
 }
 
+#loader{
+    display: flex;
+    width: 350px;
+    height: 400px;
+    border: none;
+}
+
+#gif{
+    display: flex;
+    flex-direction: row;
+}
+
+
+
 .paragrafo{
     grid-column: 2;
     grid-row: 2;
@@ -111,7 +125,7 @@ input{
 }
 
 button{
-    border: 1px solid rgb(29, 27, 27);
+    border: 1px solid rgb(0, 0, 0);
     font-size: 15px;
     cursor: pointer
 }
