--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
     background-image: url("./img/tres.jpg");
     height: 130px;
     width: 1365px;
-    border-bottom: solid 2px rgb(255, 140, 0);
+    box-shadow: 0 0 1em gold;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,14 +64,15 @@ body{
 
 #loader{
     display: flex;
-    width: 350px;
+    width: 750px;
     height: 400px;
     border: none;
 }
 
 #gif{
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    /*box-shadow: 0 0 1em gold;*/
 }
 
 
@@ -118,6 +119,7 @@ img, iframe{
     grid-row: span 2;
     margin-left: 4rem;
     display: none;
+   box-shadow: 0 0 1em rgb(255, 255, 255);
 }
 
 input{
@@ -134,5 +136,3 @@ label{
     display: flex;
     justify-content: center;
 }
-
-
